# racros

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
data/: text
examples/: auto_debug.rs  auto_str.rs  bundle_text.rs  copy_with.rs
src/: auto_debug.rs  auto_str.rs  bundle_text.rs  copy_with.rs  lib.rs  util.rs
