[package]
name = "racros"
version = "0.2.1"
authors = ["realth000"]
description = "Collection of rust macros"
categories = ["rust-patterns", "value-formatting"]
keywords = ["derive", "macros"]
repository = "https://github.com/realth000/racros"
homepage = "https://github.com/realth000/racros"
license= "MIT"
edition = "2021"
readme = "README.md"
rust-version = "1.58.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["extra-traits"] }
